WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231899
Fix leak of object returned from MTLCreateSystemDefaultDevice()
https://bugs.webkit.org/show_bug.cgi?id=231899
Summary
Fix leak of object returned from MTLCreateSystemDefaultDevice()
David Kilzer (:ddkilzer)
Reported
2021-10-18 09:10:36 PDT
Fix leak of object returned from MTLCreateSystemDefaultDevice().
Attachments
Patch v1
(2.78 KB, patch)
2021-10-18 09:14 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2021-10-18 09:10:50 PDT
Found by clang static analyzer.
Radar WebKit Bug Importer
Comment 2
2021-10-18 09:10:59 PDT
<
rdar://problem/84373621
>
David Kilzer (:ddkilzer)
Comment 3
2021-10-18 09:14:21 PDT
Created
attachment 441612
[details]
Patch v1
EWS
Comment 4
2021-10-19 08:17:08 PDT
Committed
r284454
(
243214@main
): <
https://commits.webkit.org/243214@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441612
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug