Fix leak of object returned from MTLCreateSystemDefaultDevice() <https://webkit.org/b/231899> <rdar://problem/84373621>

Reviewed by Anders Carlsson.

* platform/graphics/cocoa/GraphicsContextGLOpenGLCocoa.mm:
(WebCore::platformSupportsMetal):
* testing/Internals.mm:
(WebCore::Internals::platformSupportsMetal):
- Use adoptNS() to fix the leak.


Canonical link: https://commits.webkit.org/243214@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284454 268f45cc-cd09-0410-ab3c-d52691b4dbfc